fix image clipping at page break

--- a/exist/salmer/style/mei_print.css
+++ b/exist/salmer/style/mei_print.css
@@ -27,6 +27,8 @@ h1 {
 
 .mei svg {
     margin: 0 0 0 -1.3em;
+    display: block !important;
+    overflow: visible;
 }
 
 .mei svg .dir {
@@ -57,8 +59,9 @@ div.footer {
     stroke: #888;
 }
 
-@media print {
 
+@media print {
+    
     input {
         display: none;
     }
